Finish task 3.Remove version

--- a/lesson-3-code-execution/Task_3.html
+++ b/lesson-3-code-execution/Task_3.html
@@ -5,34 +5,22 @@
     <title>Task_3</title>
   </head>
   <body>
-    <!--Version 1-->
     <script>
       var data;
       var massData = [];
 
-
-    </script>
-
-    <!--Version 2-->
-<!--    <script>
-      function input() {
-        var massData = [];
-        while (true) {
-          var data = prompt('Ввыедите число', '');
-
-          if (data === '' || data === null || !isFinite(data)) break;
-
-          massData.push(+data);
-        }
-
-        var sum = 0;
-        for (var char of massData) {
-          sum += char;
-        }
-        return sum;
+      while (true) {
+        data = prompt('Ввыедите число', '');
+        if (data === '' || data === null || !isFinite(data)) break;
+        massData.push(+data);
       }
 
-alert(input());
-    </script>-->
+      var sum = 0;
+      for (var char of massData) {
+        sum += char;
+      }
+      console.log(massData);
+      console.log(sum);
+    </script>
   </body>
 </html>
