Final work with Jhon

--- a/lesson-5-closures/Task_alone.html
+++ b/lesson-5-closures/Task_alone.html
@@ -9,7 +9,6 @@
       var Jhon = {
         bills: [124, 48, 268, 180, 42],
         calculateTips: function () {
-          var tips = [];
           for (var i = 0; i < this.bills.length; i++) {
             function tipCalculator(bill) {
               var percentage;
@@ -28,10 +27,52 @@
             tipCalculator(this.bills[2]),
             tipCalculator(this.bills[3]),
             tipCalculator(this.bills[4])];
+        },
+        calculateFinalSum: function() {
+           this.finalSum = [this.bills[0] + this.calculateTips()[0],
+             this.bills[0] + this.calculateTips()[1],
+             this.bills[0] + this.calculateTips()[2],
+             this.bills[0] + this.calculateTips()[3],
+             this.bills[0] + this.calculateTips()[4]];
+           return this.finalSum;
+        }
+      }
+      console.log('Чаевые Джона: '+ Jhon.calculateTips());
+      console.log('Сколько в итоге потратил Джон: '+Jhon.calculateFinalSum());
+      console.log('--------------------------------------------------------');
+
+      var Jhon = {
+        bills: [124, 48, 268, 180, 42],
+        calculateTips: function () {
+          for (var i = 0; i < this.bills.length; i++) {
+            function tipCalculator(bill) {
+              var percentage;
+              if (bill < 50) {
+                percentage = 20;
+              } else if (bill >= 50 && bill < 200) {
+                percentage = 15;
+              } else {
+                percentage = 10;
+              }
+              return Math.round (percentage * bill) / 100;
+            }
+          }
+          return this.tips = [tipCalculator(this.bills[0]),
+            tipCalculator(this.bills[1]),
+            tipCalculator(this.bills[2]),
+            tipCalculator(this.bills[3]),
+            tipCalculator(this.bills[4])];
+        },
+        calculateFinalSum: function() {
+          this.finalSum = [this.bills[0] + this.calculateTips()[0],
+            this.bills[0] + this.calculateTips()[1],
+            this.bills[0] + this.calculateTips()[2],
+            this.bills[0] + this.calculateTips()[3],
+            this.bills[0] + this.calculateTips()[4]];
+          return this.finalSum;
         }
       }
 
-      console.log(Jhon.calculateTips());
     </script>
   </body>
 </html>
