--- a/lesson-14-animation/index.html
+++ b/lesson-14-animation/index.html
@@ -6,6 +6,7 @@
     <title>Title</title>
   </head>
   <body>
+    <input type='button' value='Start' onclick='startGame()'>
     <div id="pin-pongBlock"></div>
   </body>
 </html>
