--- a/lesson-22-es6/index.html
+++ b/lesson-22-es6/index.html
@@ -5,13 +5,13 @@
     <title>Home Page</title>
   </head>
   <body>
-<h2 id="hTitle">Энциклопедия</h2>
+<h1 id="hTitle">Энциклопедия</h1>
     <div id="page">
-      <input type="button" value="Перейти к оглавлению">
+      <input type="button" value="Перейти к оглавлению" onclick="switchToNav()">
     </div>
 
     <script src='http://code.jquery.com/jquery-latest.js'></script>
-    <script src="script/storage.js"></script>
-    <script src="script/app.js"></script>
+<!--    <script src="script/storage.js" defer></script>-->
+    <script src="script/app.js" defer></script>
   </body>
 </html>
